# ForgasGuildCalender-Sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/workflows/: cleanup-releases.yml  lint.yml  release.yml
scripts/: create_shortcut.ps1
src/fgc_sync/: __main__.py  _version.py  app.py  cli.py
src/fgc_sync/controllers/: app_controller.py  sync_controller.py
src/fgc_sync/i18n/: __init__.py  de-DE.json  en-UK.json
src/fgc_sync/models/: __init__.py  enums.py  events.py  sync.py  update.py
src/fgc_sync/services/: config.py  config_migrations.py  discord_poster.py  file_watcher.py  google_calendar.py  lua_parser.py  lua_parser_v1.py  lua_parser_v2.py  roster_image.py  sync_engine.py  updater.py  weekly_overview.py
src/fgc_sync/views/: preview_dialog.py  settings_dialog.py  setup_wizard.py  styles.py  tray_icon.py
tests/: test_cli_helpers.py  test_config.py  test_discord_helpers.py  test_discord_ping_messages.py  test_discord_pure.py  test_enums.py  test_events.py  test_file_watcher_threading.py  test_i18n.py  test_lua_parser.py  test_roster_image.py  test_sync_engine_helpers.py  test_sync_models.py  test_updater.py  test_weekly_overview.py
