[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fgc-sync"
version = "1.1.0"
description = "Sync Forga's Guild Calendar (WoW addon) events to Google Calendar"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.2",
    "Pillow>=10.0",
    "requests>=2.28",
    "watchdog>=4.0",
    "slpp>=1.2",
    "tzdata>=2024.1",
]

[project.gui-scripts]
fgc-sync = "fgc_sync.app:main"

[tool.setuptools.packages.find]
where = ["src"]
