[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fgc-sync"
version = "1.3.0"
description = "Sync Forga's Guild Calendar (WoW addon) events to Google Calendar and Discord"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.2",
    "Pillow>=10.0",
    "requests>=2.28",
    "watchdog>=4.0",
    "slpp>=1.2",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[project.scripts]
fgc-sync-cli = "fgc_sync.cli:main"

[project.gui-scripts]
fgc-sync = "fgc_sync.app:main"

[tool.setuptools.packages.find]
where = ["src"]
