[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fgc-sync"
version = "2.1.1"
description = "Sync Forga's Guild Calendar (WoW addon) events to Google Calendar and Discord"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.2",
    "Pillow>=10.0",
    "requests>=2.28",
    "watchdog>=4.0",
    "slpp>=1.2",
    "tzdata>=2024.1",
    "questionary>=2.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[project.scripts]
fgc-sync-cli = "fgc_sync.cli:main"

[project.gui-scripts]
fgc-sync = "fgc_sync.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length — handled by formatter if needed
    "SIM108", # ternary — not always more readable
]
